--- a/public/css/style.css
+++ b/public/css/style.css
@@ -481,8 +481,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .nav-links{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  border-radius: 0.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   font-weight: 600;
@@ -651,12 +652,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
 .mt-8{
   margin-top: 2rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mt-6{
@@ -677,14 +682,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-2{
   margin-top: 0.5rem;
-}
-
-.mb-4{
-  margin-bottom: 1rem;
-}
-
-.ml-4{
-  margin-left: 1rem;
 }
 
 .mb-16{
@@ -709,10 +706,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .-mr-10{
   margin-right: -2.5rem;
-}
-
-.mr-4{
-  margin-right: 1rem;
 }
 
 .block{
@@ -747,10 +740,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
-.h-12{
-  height: 3rem;
-}
-
 .h-auto{
   height: auto;
 }
@@ -761,6 +750,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-5{
   height: 1.25rem;
+}
+
+.h-12{
+  height: 3rem;
 }
 
 .h-8{
@@ -986,16 +979,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.375rem;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
 .rounded-sm{
   border-radius: 0.125rem;
 }
 
 .rounded{
   border-radius: 0.25rem;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-xl{
@@ -1038,9 +1031,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-top-color: rgb(242 242 242 / var(--tw-border-opacity));
 }
 
-.bg-\[\#fff\]{
+.bg-gray-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-white{
@@ -1051,6 +1044,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-brand{
   --tw-bg-opacity: 1;
   background-color: rgb(237 28 36 / var(--tw-bg-opacity));
+}
+
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-black-50{
@@ -1073,11 +1071,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(18 18 18 / var(--tw-bg-opacity));
 }
 
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
 .bg-brand-50{
   --tw-bg-opacity: 1;
   background-color: rgb(253 232 233 / var(--tw-bg-opacity));
@@ -1086,11 +1079,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-red-50{
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .bg-gray-800{
@@ -1113,24 +1101,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-75{
-  --tw-bg-opacity: 0.75;
-}
-
 .bg-opacity-80{
   --tw-bg-opacity: 0.8;
 }
 
-.bg-opacity-95{
-  --tw-bg-opacity: 0.95;
+.bg-opacity-75{
+  --tw-bg-opacity: 0.75;
 }
 
 .bg-\[url\(\'\.\.\/images\/punji-bridhi\.png\'\)\]{
   background-image: url('../images/punji-bridhi.png');
 }
 
-.bg-\[url\(\'\.\.\/images\/hero1\.jpg\'\)\]{
-  background-image: url('../images/hero1.jpg');
+.bg-\[url\(\'\.\.\/images\/hero\.jpg\'\)\]{
+  background-image: url('../images/hero.jpg');
 }
 
 .bg-gradient-to-br{
@@ -1165,20 +1149,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: url('https://images.unsplash.com/photo-1617906681842-94a418bb88f8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80');
 }
 
-.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2017\/02\/01\/22\/02\/mountain-landscape-2031539_960_720\.jpg\'\)\]{
-  background-image: url('https://cdn.pixabay.com/photo/2017/02/01/22/02/mountain-landscape-2031539_960_720.jpg');
+.bg-\[url\(\'\.\.\/images\/bkp-store\.jpg\'\)\]{
+  background-image: url('../images/bkp-store.jpg');
 }
 
-.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2019\/12\/13\/08\/21\/gokyo-ri-4692458__340\.jpg\'\)\]{
-  background-image: url('https://cdn.pixabay.com/photo/2019/12/13/08/21/gokyo-ri-4692458__340.jpg');
+.bg-\[url\(\'\.\.\/images\/bkp-agro\.jpg\'\)\]{
+  background-image: url('../images/bkp-agro.jpg');
 }
 
-.bg-\[url\(\'https\:\/\/cdn\.pixabay\.com\/photo\/2022\/03\/17\/15\/16\/monk-7074864_960_720\.jpg\'\)\]{
-  background-image: url('https://cdn.pixabay.com/photo/2022/03/17/15/16/monk-7074864_960_720.jpg');
+.bg-\[url\(\'\.\.\/images\/bkp-infosys\.jpg\'\)\]{
+  background-image: url('../images/bkp-infosys.jpg');
 }
 
-.bg-\[url\(\'\.\.\/images\/hero\.jpg\'\)\]{
-  background-image: url('../images/hero.jpg');
+.bg-\[url\(\'\.\.\/images\/bkp-jewellery\'\)\]{
+  background-image: url('../images/bkp-jewellery');
+}
+
+.bg-\[url\(\'\.\.\/images\/bkp-jewellery\.jpg\'\)\]{
+  background-image: url('../images/bkp-jewellery.jpg');
+}
+
+.bg-\[url\(\'\.\.\/images\/bkp-developers\.jpg\'\)\]{
+  background-image: url('../images/bkp-developers.jpg');
+}
+
+.bg-\[url\(\'\.\.images\/bkp-entertainment\.jpg\'\)\]{
+  background-image: url('..images/bkp-entertainment.jpg');
+}
+
+.bg-\[url\(\'\.\.images\/bkp-intertainment\.jpg\'\)\]{
+  background-image: url('..images/bkp-intertainment.jpg');
+}
+
+.bg-\[url\(\'\.\.\/images\/bkp-entertainment\.jpg\'\)\]{
+  background-image: url('../images/bkp-entertainment.jpg');
+}
+
+.bg-\[url\(\'\.\.\/images\/bkp-industries\.jpg\'\)\]{
+  background-image: url('../images/bkp-industries.jpg');
 }
 
 .from-white{
@@ -1211,14 +1219,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-position: center;
 }
 
-.bg-bottom{
-  background-position: bottom;
-}
-
-.bg-top{
-  background-position: top;
-}
-
 .bg-no-repeat{
   background-repeat: no-repeat;
 }
@@ -1233,6 +1233,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .fill-gray-700{
   fill: #374151;
+}
+
+.fill-green-400{
+  fill: #4ade80;
 }
 
 .fill-green-500{
@@ -1270,20 +1274,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
-.p-6{
-  padding: 1.5rem;
+.p-8{
+  padding: 2rem;
 }
 
 .p-4{
   padding: 1rem;
 }
 
-.p-8{
-  padding: 2rem;
-}
-
 .p-9{
   padding: 2.25rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .p-3{
@@ -1358,11 +1362,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-20{
   padding-top: 5rem;
   padding-bottom: 5rem;
-}
-
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
 }
 
 .pt-32{
@@ -1443,11 +1442,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-medium{
   font-weight: 500;
 }
@@ -1480,9 +1474,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   letter-spacing: 0.1em;
 }
 
-.text-gray-700{
+.text-gray-600{
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-gray-800{
@@ -1515,9 +1509,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
-.text-black-800{
+.text-gray-700{
   --tw-text-opacity: 1;
-  color: rgb(46 46 46 / var(--tw-text-opacity));
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-transparent{
@@ -1534,9 +1528,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(23 23 23 / var(--tw-text-opacity));
 }
 
-.text-gray-600{
+.text-black-800{
   --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
+  color: rgb(46 46 46 / var(--tw-text-opacity));
 }
 
 .text-gray-300{
@@ -1549,19 +1543,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(185 185 185 / var(--tw-text-opacity));
 }
 
-.text-gray-200{
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
-
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-50{
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
 }
 
 .text-gray-100{
@@ -1579,21 +1563,8 @@ Ensure the default browser behavior of the `hidden` attribute.
           text-decoration-color: #ed1c24;
 }
 
-.decoration-brand-600{
-  -webkit-text-decoration-color: #f26066;
-          text-decoration-color: #f26066;
-}
-
 .decoration-4{
   text-decoration-thickness: 4px;
-}
-
-.decoration-2{
-  text-decoration-thickness: 2px;
-}
-
-.underline-offset-1{
-  text-underline-offset: 1px;
 }
 
 .antialiased{
@@ -1636,15 +1607,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-sm{
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm{
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1705,10 +1676,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .placeholder\:text-sm::placeholder{
   font-size: 0.875rem;
   line-height: 1.25rem;
-}
-
-.hover\:mr-4:hover{
-  margin-right: 1rem;
 }
 
 .hover\:rounded-3xl:hover{
@@ -1776,6 +1743,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hover\:shadow:hover{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-xl:hover{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1909,6 +1882,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     flex-direction: row;
   }
 
+  .md\:gap-4{
+    gap: 1rem;
+  }
+
   .md\:gap-6{
     gap: 1.5rem;
   }
@@ -1941,9 +1918,9 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 1;
   }
 
-  .md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .md\:font-normal{
