--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
       @apply max-w-5xl mx-auto px-8 py-16;
     }
     .nav-links {
-      @apply transition duration-200 ease-in-out hover:bg-brand font-semibold hover:text-white py-6 px-3;
+      @apply transition duration-200 ease-in-out hover:bg-brand font-semibold hover:text-white rounded py-2 px-3;
     }
     .btn {
       @apply py-2 px-5 bg-gray-800 text-white text-xs tracking-wider rounded shadow-md hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-black-400 focus:ring-opacity-75;
